force-app/main/default/objects/DevCore__Bisnode_Error_Event__e/DevCore__Bisnode_Error_Event__e.object-meta.xml
<CustomObject>
    <label>Bisnode Error Event</label>
    <pluralLabel>Bisnode Error Events</pluralLabel>
</CustomObject>