force-app/main/default/objects/DevCore__Bisnode_Error_Event__e/fields/DevCore__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>